--- a/src/beer-contact.html
+++ b/src/beer-contact.html
@@ -188,7 +188,7 @@
         this.$.editDialog.open()
       },
 
-      _test(obj){
+      _test: function (obj){
         console.log(obj);
       }
 
