--- a/src/beer-favorite-beer.html
+++ b/src/beer-favorite-beer.html
@@ -67,7 +67,7 @@ TEST-->
       }
     },
 
-  _toArray(obj){
+  _toArray: function (obj){
     
     if(obj){
       var returnArray=[];
@@ -93,7 +93,7 @@ TEST-->
       return 0;
     },
     
-    _test(obj){
+    _test: function (obj){
       console.log("RATING", obj);
     }
 
