--- a/src/beer-favorite-pub.html
+++ b/src/beer-favorite-pub.html
@@ -66,7 +66,7 @@
       }
     },
 
-  _toArray(obj){
+  _toArray: function (obj){
     
     if(obj){
       var returnArray=[];
@@ -91,7 +91,7 @@
       return 0;
     },
     
-    _test(obj){
+    _test: function (obj){
       console.log("RATING", obj);
     }
 
