--- a/src/beer-menu-edit-item-tag.html
+++ b/src/beer-menu-edit-item-tag.html
@@ -83,7 +83,7 @@
 
       // },
 
-      _setTag(e){
+      _setTag: function (e){
         var target = e.currentTarget;
         var checked = target.checked;
         var tag = target.tag;
@@ -99,7 +99,7 @@
  
       },
 
-      _checked(tag, key){
+      _checked: function (tag, key){
         return tag[key];
       },
 
