--- a/src/beer-menu-meta.html
+++ b/src/beer-menu-meta.html
@@ -31,7 +31,7 @@
     //   this.loaded = true
     // },
 
-    _menuItemChanged(menuItem){
+    _menuItemChanged: function (menuItem){
      
         console.log('menuItem')
       
