--- a/src/beer-tap-card.html
+++ b/src/beer-tap-card.html
@@ -339,7 +339,7 @@
         this.toggle = false;
       },
 
-      _hideChoice(tap, choice){
+      _hideChoice: function (tap, choice){
 
         if(tap === choice){
           return true
