--- a/src/beer-tap-edit.html
+++ b/src/beer-tap-edit.html
@@ -112,7 +112,7 @@
       //   },
       //  },
 
-      _addToTapList(event){
+      _addToTapList: function (event){
         var target = event.currentTarget
         var beer = target.beer;
         // console.log(target.beer);
