--- a/src/beer-tv.html
+++ b/src/beer-tv.html
@@ -224,7 +224,7 @@
       //   return dialog.length;
       // },
 
-      _watchForCardNumberChange(width, height){
+      _watchForCardNumberChange: function (width, height){
         // this.numberOfCards = width*height;
         // console.log(this.numberOfCards);
         // if(this.numberOfCards){
