--- a/src/beer-beer-tap.html
+++ b/src/beer-beer-tap.html
@@ -403,7 +403,7 @@
       },
 
 
-      _computeTapped(tappedData){
+      _computeTapped: function (tappedData){
         
         return tappedData.tapped ;
       },
@@ -615,7 +615,7 @@
 
       },
 
-      _hideChoice(tap, choice){
+      _hideChoice: function (tap, choice){
         if(tap === choice){
           return true
         }else{
