--- a/src/beer-pub-rating.html
+++ b/src/beer-pub-rating.html
@@ -77,8 +77,7 @@ paper-listbox {
         id="auth" 
         app-name="beer"
         user="{{user}}" 
-        status-known="{{statusKnown}}"
-        on-error="handleError">
+        status-known="{{statusKnown}}">
     </firebase-auth>
 
 
@@ -86,14 +85,14 @@ paper-listbox {
         app-name="beer"
         id="rating"
         disabled
-        path="user/[[user.uid]]/favorite/[[orgId]]/rating"
+        path="user/[[user.uid]]/favorite/[[placeId]]/rating"
         data="{{userRating}}">
     </firebase-document>
  
     <firebase-document
         app-name="beer"
         id="pub"
-        path="organization/[[orgId]]">
+        path="organization/[[placeId]]">
     </firebase-document>
 
 
@@ -140,6 +139,12 @@ Polymer({
   is: 'beer-pub-rating',
 
   properties: {
+      address:{
+          type: String
+      },
+      name: {
+          type: String
+      },
 
     savedRating:{
         type: Object
@@ -147,7 +152,7 @@ Polymer({
     statusKnown:{
         type: Boolean
     },
-    orgId:{
+    placeId:{
         type:String
     },
 
@@ -218,12 +223,20 @@ _selectedRating: function (){
     var saved = this.$.rating.data;
     if(this.user){
         var obj = {};
+        var favorite = {};
         if(saved === rating){
+          favorite = null;
           rating = null;
-        } 
+        } else {
+            
+            favorite.rating = rating;
+            favorite.name = this.name;
+            favorite.vicinity = this.address;
+            favorite.place_id = this.placeId;
+        }
 
-        obj['favorite/'+this.orgId+'/'+this.user.uid+'/rating'] = rating;
-        obj['user/'+this.user.uid+'/favorite/'+this.orgId+'/rating'] = rating;
+        obj['favorite/'+this.placeId+'/'+this.user.uid+'/rating'] = rating;
+        obj['user/'+this.user.uid+'/favorite/'+this.placeId] = favorite;
 
         // console.log(obj);
         var app = this.$.rating.app;
@@ -278,7 +291,7 @@ _selectedRating: function (){
     },
 
 
-  _test(obj){
+  _test: function (obj){
       console.log(obj)
   }
 
