updated initial load

--- a/src/beer-beer-card-mini.html
+++ b/src/beer-beer-card-mini.html
@@ -79,15 +79,9 @@
       }
 
     </style>
-    <!--<firebase-document
-        app-name="beer"
-        path="beer/[[beerId]]"
-        data="{{beer}}">
-    </firebase-document>-->
 
 
-
-
+    <a href="/[[nameUrl]]/description?orgid=[[orgId]]&beerId=[[beerId]]">
       <paper-material class='card' elevation="0" animated-shadow="false">
         <div>
             <div>
@@ -103,6 +97,7 @@
             </div>
          </div>
       </paper-material>
+    </a>
   </template>
 
   <script>
