--- a/src/beer-search.html
+++ b/src/beer-search.html
@@ -184,7 +184,7 @@
  
 
       _observeLocation: function (latitude, longitude){
-          console.log("TEST")
+          // console.log("TEST")
           if(latitude){
             if(longitude){
               this.gLatitude =latitude;
