--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+  <!--<meta name="apple-mobile-web-app-capable" content="yes">-->
 
   <title>Beer-Fly</title>
 
-  <link rel="shortcut icon" sizes="32x32" href="/images/shop-icon-32.png">
+  <link rel="shortcut icon" sizes="29x29" href="/images/beer-icon-29.png">
+  <link rel="apple-touch-icon" href="/images/beer-icon-44.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/images/beer-icon-152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/beer-icon-180.png">
+  <link rel="apple-touch-icon" sizes="167x167" href="/images/beer-icon-167.png">
+
+  <link rel="apple-touch-startup-image" href="/images/beer-icon-1024.png">
+
+
 
   <meta name="theme-color" content="#fff">
   <link rel="manifest" href="/manifest.json">
