--- a/src/beer-tap-add.html
+++ b/src/beer-tap-add.html
@@ -60,14 +60,22 @@
     <firebase-auth  app-name="beer" user="{{user}}"></firebase-auth>
     <google-maps-api id="map" api-key="AIzaSyBPa6XlVFjF48fEyNT3qtnkFTZ0_dGMAzI" version="3.exp"></google-maps-api>
 
-    <firebase-query 
+    <!--<firebase-query 
       id="beers"
       order-by-child="place_id"
       equal-to="[[placeId]]"
-      limit-to-first="50"
+      limit-to-first="100"
       disabled
       app-name="beer" 
       path="beer" 
+      data="{{beers}}">
+  </firebase-query>-->
+
+  <firebase-query 
+      id="beers"
+      disabled
+      app-name="beer" 
+      path="organization/[[placeId]]/brewBeer" 
       data="{{beers}}">
   </firebase-query>
 
@@ -79,7 +87,6 @@
 
    
    <paper-material class="card" elevation="0">
-     
    <paper-input label="Search for brewery" value="{{queryString}}">
      <iron-icon icon="beer-icons:search" prefix></iron-icon>
       <paper-icon-button class="clear" suffix onclick="clearInput()" icon="beer-icons:clear" alt="clear" title="clear">
@@ -100,7 +107,7 @@
       </template>
     </paper-listbox>
     </iron-collapse>
-
+   
     <div class="brewery-info" hidden="[[!placeId]]">
       <div class="brewery-name">[[brewery.name]]</div>
       <div class="address">[[brewery.formatted_address]]</div>
@@ -110,7 +117,6 @@
           Add a missing beer</a>
       </iron-label>
     </div>
-
     </paper-material>
     
     <div id="beerCards">
