--- a/src/beer-menu-edit-item.html
+++ b/src/beer-menu-edit-item.html
@@ -9,6 +9,7 @@
 <link rel="import" href="../bower_components/polymerfire/firebase-document.html">
 <link rel="import" href="../bower_components/swipe-action/swipe-action.html">
 <link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout.html">
+<link rel="import" href="../bower_components/toggle-icon/toggle-icon.html">
 
 
 <link rel="import" href="beer-menu-meta.html">
