--- a/src/beer-beer-info.html
+++ b/src/beer-beer-info.html
@@ -200,6 +200,11 @@
          type:Object
        },
 
+       login:{
+         type: Boolean,
+         notify: true
+       },
+
        pubArray:{
          type: Array,
          value: function (){return [];}
