changed observer away from on-click

--- a/my_components/data/upload-image.html
+++ b/my_components/data/upload-image.html
@@ -180,7 +180,10 @@
 
   },
 
-  observers:['uploadOnChange(uploadValue)', 'watchForSuccess(fileComplete)','watchForError(fileError)','watchForUrl(url)'],
+  observers:['uploadOnChange(uploadValue)', 
+              'watchForSuccess(fileComplete)',
+              'watchForError(fileError)',
+              'watchForUrl(url)'],
   // behaviors:[Polymer.FirebaseDatabaseBehavior],
 
   watchForSuccess: function (fileComplete) {
