remove crowd source strategy

--- a/src/beer-beer-card.html
+++ b/src/beer-beer-card.html
@@ -126,7 +126,7 @@
                   login="{{login}}">
               </beer-beer-rating>
             </div>
-            <div hidden$="[[!edit]]">
+            <div hidden$="[[!owner]]">
               <a aria-label$="TEST" href$="/[[nameUrl]]/beer-edit?orgid=[[placeId]]&beerId=[[beerId]]">
                 <paper-icon-button icon="beer-icons:edit"></paper-icon-button>
               </a>
