--- a/src/beer-home2.html
+++ b/src/beer-home2.html
@@ -290,8 +290,8 @@
 
       _observeLocation: function (newLocation, oldLocation){
 
-        console.log('newLocation', newLocation);
-        console.log('oldLocation', oldLocation);
+        // console.log('newLocation', newLocation);
+        // console.log('oldLocation', oldLocation);
         this.$.spinner.active = false;
 
         if(oldLocation){
@@ -302,8 +302,8 @@
       },
 
       _observeAllObj: function (newObj, oldObj){
-        console.log('newObj', newObj);
-        console.log('oldObj', oldObj)
+        // console.log('newObj', newObj);
+        // console.log('oldObj', oldObj)
       },
 
       _isVisible: function (page){
