--- a/src/beer-beer-admin.html
+++ b/src/beer-beer-admin.html
@@ -217,7 +217,7 @@
         }
       },
 
-      _updateStatus(statusData){
+      _updateStatus: function (statusData){
        
          var obj = {};
 
