--- a/src/beer-login.html
+++ b/src/beer-login.html
@@ -324,7 +324,7 @@
                    
       },
 
-    _showEmailSignin(){
+    _showEmailSignin: function (){
         this.emailToggle = !this.emailToggle;
     },
       
