--- a/src/lazy-resources.html
+++ b/src/lazy-resources.html
@@ -11,14 +11,14 @@
 
 <link rel="import" href="beer-tabs.html">
 <link rel="import" href="beer-tab.html">
-
+<link rel="import" href="beer-login.html">
 
 <link rel="import" href="beer-404-warning.html">
 
 <link rel="import" href="../bower_components/iron-form/iron-form.html">
 <link rel="import" href="../bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="../bower_components/paper-spinner/paper-spinner-lite.html">
-
+ 
 
 <link rel="import" href="../bower_components/iron-collapse/iron-collapse.html">
 <link rel="import" href="../bower_components/paper-item/paper-item.html">
@@ -29,5 +29,3 @@
 <link rel="import" href="../bower_components/neon-animation/animations/scale-up-animation.html">
 <link rel="import" href="../bower_components/neon-animation/animations/fade-out-animation.html">
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
-<link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
-<link rel="import" href="../bower_components/paper-dialog-scrollable/paper-dialog-scrollable.html">
