update edit beer

--- a/src/beer-app.html
+++ b/src/beer-app.html
@@ -547,6 +547,7 @@
         opened="{{login}}">
     <paper-dialog-scrollable>
       <section>
+        <!--lazy loaded-->
       <beer-login></beer-login>
       </section>
     </paper-dialog-scrollable>
